--- a/testing/content/files/en-us/markdown/tool/h2m/index.html
+++ b/testing/content/files/en-us/markdown/tool/h2m/index.html
@@ -4,36 +4,70 @@ slug: Markdown/Tool/H2M
 tags:
   - Tag2
 ---
+
 <p><code>Markdown</code> is a nicer format than <code>HTML</code>.</p>
+
 <h1>Heading 1</h1>
+
 <p>Nothing to say, really.</p>
+
 <h2>Heading 2</h2>
+
 <p>Basic formatting such as <strong>bold</strong> and <em>emphasis</em>.</p>
+
 <p>Here's a section that simply mentions links like <a href="https://www.peterbe.com">https://www.peterbe.com</a> for example.</p>
+
 <h3>Heading 3</h3>
+
 <p>A bullet point list:</p>
+
 <ul>
   <li>One</li>
   <li>Two</li>
   <li>Three</li>
 </ul>
-<p>This is a paragraph with a link to <a href="/en-US/docs/Markdown/Tool/H2M">this page</a>.</p>
+
+<p>This is a paragraph with a link to <a href="/ko/docs/Markdown/Tool/H2M">this page</a>.</p>
+
 <h2>Other stuff</h2>
+
 <p>This is a paragraph with a link to <a href="/en-US/docs/Web">another page</a>.</p>
+
+<h3>Cards</h3>
+
+<div class="blockIndicator note">
+  <strong>Note:</strong> you should also check out this <a href="https://www.queengoob.org">other cool page</a>!
+</div>
+
+<div class="blockIndicator note"><p>Thanks for contributing to MDN!</p></div>
+
+<div class="warning">
+  <p><strong>Warning</strong>: the above implementation is partially buggy. It is recommended to use <code>helloWorld();</code> instead.</p>
+</div>
+
+<div class="callout">
+  <p><strong>  Callout </strong> : remember to remove unneeded whitespace.</p>
+</div>
+
 <h3>A Definition List</h3>
+
 <dl>
   <dt>Key</dt>
   <dd>Value</dd>
 </dl>
+
 <h3>Some code blocks</h3>
+
 <pre class="brush: html">
-  &lt;canvas id="game" width="128" height="128"&gt;&lt;/canvas&gt;
+&lt;canvas id="game" width="128" height="128"&gt;&lt;/canvas&gt;
 </pre>
+
 <pre class="brush: js">
 function foo() {
   return undefined + 1;
 }
 </pre>
+
 <pre class="brush: css">
 div#foo {
   color: pink;
