Further improve card conversion
Fixes #51.

--- a/testing/content/files/en-us/markdown/tool/h2m/index.html
+++ b/testing/content/files/en-us/markdown/tool/h2m/index.html
@@ -49,6 +49,15 @@ tags:
   <p><strong>  Callout </strong> : remember to remove unneeded whitespace.</p>
 </div>
 
+<div class="warning">
+  <p><strong>Warning:</strong> Try the following code instead:</p>
+
+  <pre
+    class="brush: js line-numbers language-js"
+  ><code class="language-js">var img = document.createElementNS("http://www.w3.org/2000/svg", "image");
+img.setAttributeNS("http://www.w3.org/1999/xlink", "xlink:href", "move.png");</code></pre>
+</div>
+
 <h3>A Definition List</h3>
 
 <dl>
