Better handle lists inside of definition lists
Fixes #56.

--- a/testing/content/files/en-us/markdown/tool/h2m/index.html
+++ b/testing/content/files/en-us/markdown/tool/h2m/index.html
@@ -61,8 +61,16 @@ img.setAttributeNS("http://www.w3.org/1999/xlink", "xlink:href", "move.png");</c
 <h3>A Definition List</h3>
 
 <dl>
-  <dt>Key</dt>
-  <dd>Value</dd>
+  <dt>Key 1</dt>
+  <dd>Value 1</dd>
+  <dt>Key 2</dt>
+  <dd>Value 2, can be one of:
+    <ul>
+      <li>Foo</li>
+      <li>Bar</li>
+      <li>Baz</li>
+    </ul>
+  </dd>
 </dl>
 
 <h3>Some code blocks</h3>
