Overhaul testing script

--- a/testing/content/en-us/main.html
+++ b/testing/content/en-us/main.html
@@ -4,7 +4,6 @@ slug: Markdown/Tool/H2M
 tags:
   - Tag2
 ---
-
 <p><code>Markdown</code> is a nicer format than <code>HTML</code>.</p>
 
 <h1>Heading 1</h1>
@@ -132,7 +131,7 @@ Hello there, world! How are you doing?
       <td>Heatwaves</td>
     </tr>
     <tr>
-      <th colspan="2" scope="row">Thank you, space!</td>
+      <td colspan="2" scope="row">Thank you, space!</td>
     </tr>
  </tbody>
 </table>
