Ignore empty cards
Fixes #65.

--- a/test/content/en-us/main.html
+++ b/test/content/en-us/main.html
@@ -57,6 +57,8 @@ tags:
 img.setAttributeNS("http://www.w3.org/1999/xlink", "xlink:href", "move.png");</code></pre>
 </div>
 
+<div class="note"></div>
+
 <h3>A Definition List</h3>
 
 <dl>
