Fix <dl> conversion (again)
Fixes #68.

--- a/test/content/zh-cn/dl.html
+++ b/test/content/zh-cn/dl.html
@@ -14,3 +14,14 @@ slug: dl
  <dt><code>contain</code></dt>
  <dd>缩放背景图片以完全装入背景区，可能背景区部分空白。<code>contain</code> 尽可能的缩放背景并保持图像的宽高比例（图像不会被压缩）。该背景图会填充所在的容器。当背景图和容器的大小的不同时，容器的空白区域（上/下或者左/右）会显示由 background-color 设置的背景颜色。</dd>
 </dl>
+
+<dl>
+  <dt>{{domxref("MouseEvent.altKey")}} {{readonlyinline}}</dt>
+  <dd>当鼠标事件触发的时，如果 alt 键被按下，返回 true;</dd>
+  <dt>{{domxref("MouseEvent.button")}} {{readonlyinline}}</dt>
+  <dd>当鼠标事件触发的时，如果鼠标按钮被按下（如果有的话），将会返回一个数值。</dd>
+  <dt>{{domxref("MouseEvent.buttons")}} {{readonlyinline}}</dt>
+  <dd>
+    <p>当鼠标事件触发的时，如果多个鼠标按钮被按下（如果有的话），将会返回一个或者多个代表鼠标按钮的数字。</p>
+  </dd>
+</dl>
