Fix <dl> conversion with non-paragraph elements
Fixes #69.

--- a/test/content/zh-cn/dl.html
+++ b/test/content/zh-cn/dl.html
@@ -24,4 +24,6 @@ slug: dl
   <dd>
     <p>当鼠标事件触发的时，如果多个鼠标按钮被按下（如果有的话），将会返回一个或者多个代表鼠标按钮的数字。</p>
   </dd>
+  <dt>{{domxref("AudioParam")}}</dt>
+  <dd><strong><code>AudioParam</code></strong> 接口代表音频相关的参数，比如一个 {{domxref("AudioNode")}} 的参数。它可以设置为特定值或值的变化，并且可以在指定的时间之后以指定模式变更。</dd>
 </dl>
